# IITMM

CmakeStart/: CMakeLists.txt  main.cpp
CmakeStart/lib/: CMakeLists.txt  Image.cpp  Image.h
Image/: CMakeLists.txt  function.cmake  main.cpp
Image/ImageLib/: CMakeLists.txt  IMethod.h  Image.h  ImageTXT.cpp  ImageTXT.h
Image/gtest/: CMakeLists.txt
Image/lib/: CMakeLists.txt  Image.cpp  Image.h  ImageBin.cpp  ImageTXT.cpp
Image/main/: main.cpp
Image/src/: CMakeLists.txt  Image.cpp  Image.h  ImageBin.cpp  ImageBin.h  ImageTestCheck.cpp  ImageTestCheck.h  main.cpp
Image/test/: test_increase.cpp  test_main.cpp
Image/tst/: ImageBin-test.cpp
